Loan Calculator finished

--- a/projects/loan-calculator/index.html
+++ b/projects/loan-calculator/index.html
@@ -42,7 +42,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" value="Calculate" class="btn btn-dark btn-block">
+                <input type="submit" value="Calculate" class="btn btn-dark btn-block">
               </div>
             </form>
             <!-- Loader -->
