--- a/projects/easy-http/index.html
+++ b/projects/easy-http/index.html
@@ -9,7 +9,11 @@
 <body>
   <h1>EasyHTTP Example</h1>
 
-  <script src="easyhttp.js"></script>
-  <script src="app.js"></script>
+  <!-- <script src="easyhttp.js"></script> -->
+  <!-- <script src="easyhttp2.js"></script> -->
+  <script src="easyhttp3.js"></script>
+  <!-- <script src="app.js"></script> -->
+  <!-- <script src="app2.js"></script> -->
+  <script src="app3.js"></script>
 </body>
 </html>
