--- a/projects/github-finder/index.html
+++ b/projects/github-finder/index.html
@@ -16,7 +16,7 @@
   <div class="container search-container">
     <div class="search card card-body">
       <h1>Seach GitHub Users</h1>
-      <p class="lead">Enter a usernmae to fetch a user profile and repos</p>
+      <p class="lead">Enter a username to fetch a user profile and repos</p>
       <input type="text" id="search-user" class="form-control" placeholder="GitHub Username...">
     </div>
     <br>
