--- a/js-sandbox/js-patterns/lecture4/index.html
+++ b/js-sandbox/js-patterns/lecture4/index.html
@@ -11,7 +11,11 @@
   <button class="sub-ms">Subscribe to Milliseconds</button>
   <button class="unsub-ms">Unsubscribe from Milliseconds</button>
   <br><br>
+  <button class="sub-s">Subscribe to Seconds</button>
+  <button class="unsub-s">Unsubscribe from Seconds</button>
+  <br><br>
   <button class="fire">Fire</button>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
+  <script src="appEs6.js"></script>
 </body>
 </html>
