--- a/projects/tracalorie/index.html
+++ b/projects/tracalorie/index.html
@@ -27,11 +27,11 @@
         <form class="col">
           <div class="row">
             <div class="input-field col s6">
-              <input type="text" placeholder="Add item" id="item-name">
+              <input type="text" placeholder="Add item" id="item-name" required autofocus>
               <label for="item-name">Meal</label>
             </div>
             <div class="input-field col s6">
-              <input type="text" placeholder="Add calories" id="item-calories">
+              <input type="number" placeholder="Add calories" id="item-calories" required>
               <label for="item-calories">Calories</label>
             </div>
             <button class="add-btn btn blue darken-3"><i class="fas fa-plus"></i> Add Meal</button>
@@ -50,15 +50,15 @@
     <ul id="item-list" class="collection">
       <!-- <li class="collection-item" id="item-0">
         <strong>Steak Dinner: </strong><em>1200 calories</em>
-        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt"></i></a>
+        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt edit-item"></i></a>
       </li>
       <li class="collection-item" id="item-0">
         <strong>Cookie: </strong><em>400 calories</em>
-        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt"></i></a>
+        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt edit-item"></i></a>
       </li>
       <li class="collection-item" id="item-0">
         <strong>Eggs: </strong><em>300 calories</em>
-        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt"></i></a>
+        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt edit-item"></i></a>
       </li> -->
     </ul>
   </div>
