--- a/projects/tracalorie/index.html
+++ b/projects/tracalorie/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tracalorie | Meal &amp; Calorie Tracker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <style>
+    button {
+      margin-right: 10px;
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -35,8 +40,8 @@
               <label for="item-calories">Calories</label>
             </div>
             <button class="add-btn btn blue darken-3"><i class="fas fa-plus"></i> Add Meal</button>
-            <!-- <button class="update-btn btn orange"><i class="fas fa-pencil-alt"></i> Update Meal</button>
-            <button class="delete-btn btn red"><i class="fas fa-times"></i> Delete Meal</button> -->
+            <button class="update-btn btn orange"><i class="fas fa-pencil-alt"></i> Update Meal</button>
+            <button class="delete-btn btn red"><i class="fas fa-times"></i> Delete Meal</button>
             <button class="back-btn btn grey right"><i class="fas fa-chevron-circle-left"></i> Back</button>
           </div>
         </form>
@@ -51,14 +56,6 @@
       <!-- <li class="collection-item" id="item-0">
         <strong>Steak Dinner: </strong><em>1200 calories</em>
         <a href="#" class="secondary-content"><i class="fas fa-pencil-alt edit-item"></i></a>
-      </li>
-      <li class="collection-item" id="item-0">
-        <strong>Cookie: </strong><em>400 calories</em>
-        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt edit-item"></i></a>
-      </li>
-      <li class="collection-item" id="item-0">
-        <strong>Eggs: </strong><em>300 calories</em>
-        <a href="#" class="secondary-content"><i class="fas fa-pencil-alt edit-item"></i></a>
       </li> -->
     </ul>
   </div>
@@ -66,6 +63,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+  <script src="item.js"></script>
+  <script src="ui.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
